ConfirmActionHandler - reading local html file
It can now identify whether the url entered by the user is a local file
or a url link and display the content.